update code for java 21